--- a/loginsystem/index.html
+++ b/loginsystem/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>登陆</title>
-    <link rel="stylesheet" href="https://at.alicdn.com/t/font_1213570_q8x66j3agp.css">
+    <link rel="stylesheet" href="https://at.alicdn.com/t/font_1213570_isvkgpqczg.css">
     <script src="./jquery-1.12.4.js"></script>
 </head>
 <style>
@@ -56,12 +56,15 @@
     }
 
     .login_title_right {
-        color: #666;
         float: right;
         cursor: pointer;
     }
 
-    .login_title_right:hover {
+    .login_t_result {
+        color: #999;
+    }
+
+    .login_t_result:hover {
         color: #b4a078;
     }
 
@@ -211,7 +214,8 @@
         display: none;
     }
 
-    .input_del_pwd {
+    .input_del_pwd,
+    .input_change {
         display: none;
     }
 </style>
@@ -220,7 +224,7 @@
     <div class="login_box_body">
         <div class="login_box">
             <div class="login_title_t ">
-                <div class="login_title_left">
+                <div class="login_title_left login_t_result">
                     手机号登陆
                 </div>
                 <span class="iconfont icon-vertical_line"></span>
@@ -230,21 +234,38 @@
                 <span class="iconfont icon-shanchu title_span"></span>
             </div>
             <div class="login_nei_box">
-                <div class="login_nei_mima" style="">
+                <div class="login_nei_mima">
                     使用密码验证登陆
                 </div>
-                <div class="login_account login_input_box">
+
+                <!-- 邮箱登陆 -->
+                <div class="login_input_box mail_acc  input_change ">
+                    <span>
+                        <i class="iconfont icon-youxiang"></i>
+                    </span>
+                    <span>
+                        <i class="iconfont icon-vertical_line"></i>
+                    </span>
+                    <input type="text" name="account" class="mail_acc_input login_input login_account_input" placeholder="请输入邮箱">
+                    <span>
+                        <i class="iconfont icon-shanchu input_del input_del_account"></i>
+                    </span>
+                </div>
+
+                <!-- 手机号登陆 -->
+                <div class="login_input_box  phone_acc">
                     <span>
                         <i class="iconfont icon-shouji1"></i>
                     </span>
                     <span>
                         <i class="iconfont icon-vertical_line"></i>
                     </span>
-                    <input type="text" name="account" class="login_account_input login_input" placeholder="请输入手机号">
+                    <input type="text" name="account" class="phone_acc_input login_input login_account_input" placeholder="请输入手机号">
                     <span>
                         <i class="iconfont icon-shanchu input_del input_del_account"></i>
                     </span>
                 </div>
+
                 <div class="login_pwd login_input_box">
                     <span>
                         <i class="iconfont icon-suo"></i>
@@ -268,7 +289,7 @@
                     <span class="iconfont icon-weibo1"></span>
                     <span class="iconfont icon-wangyi"></span>
                     <a href="#">遇到问题？</a>
-                    <a href="#">手机快捷注册</a>
+                    <a href="../register/index.html">手机快捷注册</a>
 
                 </div>
             </div>
@@ -280,6 +301,23 @@
 
 </body>
 <script>
+    //手机登陆
+    $(".login_title_left").on('click', function () {
+        $(".login_title_left").removeClass("login_t_result");
+        $(".login_title_right").addClass("login_t_result");
+        $(".phone_acc").removeClass("input_change");
+        $(".mail_acc").addClass("input_change");
+    })
+
+
+    //邮箱登陆
+    $(".login_title_right").on('click', function () {
+        $(".login_title_right").removeClass("login_t_result");
+        $(".login_title_left").addClass("login_t_result");
+        $(".mail_acc").removeClass("input_change");
+        $(".phone_acc").addClass("input_change");
+    })
+
     //input 里的删除删除输入的信息，并消除自身
     $(".title_span").on('click', function () {
         $('.login_box_body').css('display', 'none')
@@ -312,30 +350,72 @@
         $('.login_account_input ').val("")
         $('.input_del_account').css('display', 'none')
     })
+
+    //注册按钮
     $('#login_input_btn').on('click', function () {
-        var accounr_login = $('.login_account_input').val()
-        var pwd_login = $('.login_pwd_input ').val()
-        if (accounr_login == '' || pwd_login == '') {
-            $('.login_tishi_t').html(" ✗ 账号或密码不能为空").css('color', 'red');
+        var mail = $('.mail_acc_input').val();
+        console.log(mail)
+        var phone = $('.phone_acc_input').val();
+        var pwd_login = $('.login_pwd_input').val();
+        console.log(phone)
+        console.log(pwd_login)
+        // var accounr_login = $('.login_account_input').val()
+        // var pwd_login = $('.login_pwd_input ').val()
+        // if (accounr_login == '' || pwd_login == '') {
+        //     $('.login_tishi_t').html(" ✗ 账号或密码不能为空").css('color', 'red');
+        // }
+        if ( mail == '') {
+            $.post(
+                "./php/loginphone.php",
+                { phone: phone, pwd_login: pwd_login },
+                function (data) {
+                    if (data.dig == 200) {
+                        // $('.login_tishi_t').html(data.mas).css('color', 'green');
+                        // $('.login_box_body').css('display', 'none')
+                        console.log(data);
+
+                    } else {
+                        $('.login_tishi_t').html(data.mas).css('color', 'red');
+                    }
+                    console.log(data);
+                }, "json");
+        } else if ( phone == '') {
+            $.post(
+                "./php/loginmail.php",
+                { mail: mail, pwd_login: pwd_login },
+                function (data) {
+                    if (data.dig == 200) {
+                        // $('.login_tishi_t').html(data.mas).css('color', 'green');
+                        // $('.login_box_body').css('display', 'none')
+                        console.log(data);
+
+                    } else {
+                        $('.login_tishi_t').html(data.mas).css('color', 'red');
+                    }
+                    console.log(data);
+                }, "json");
         }
-        $.post(
-            "./php/loginsystem.php",
-            { accounr_login: accounr_login, pwd_login: pwd_login },
 
-            function (data) {                
-                if (data.dig == 200) {
-                    // $('.login_tishi_t').html(data.mas).css('color', 'green');
-                    $('.login_box_body').css('display', 'none')
+        //     $('.login_tishi_t').html(" ✗ 账号或密码不能为空").css('color', 'red');
+        // }
 
-                }else{
-                    $('.login_tishi_t').html(data.mas).css('color', 'red');
-                } 
-                console.log(data); 
-            }, "json");
-        $('.input_del_account').css('display', 'none')
-        $('.input_del_pwd').css('display', 'none')
-        $('.login_account_input').val("");
-        $('.login_pwd_input ').val("");
+        // $.post(
+        //     "./php/loginmail.php",
+        //     {  mail : mail , pwd_login: pwd_login },
+        //     function (data) {
+        //         if (data.dig == 200) {      
+        //             $('.login_box_body').css('display', 'none')
+
+        //         } else {
+        //             $('.login_tishi_t').html(data.mas).css('color', 'red');
+        //         }
+        //         console.log(data);
+        //     }, "json");
+
+        // $('.input_del_account').css('display', 'none')
+        // $('.input_del_pwd').css('display', 'none')
+        // $('.login_account_input').val("");
+        // $('.login_pwd_input ').val("");
     });
 
 
