注册页面正则修改  0.2

--- a/register/index.html
+++ b/register/index.html
@@ -213,12 +213,12 @@
                     </li>
                     <li class="zc_li title_tishi">
                         <span class="zc_title">密码:</span>
-                        <input type="text" name="" class="pwd zc_input" placeholder="6-16位密码，区分大小写">
+                        <input type="password" name="" class="pwd zc_input" placeholder="6-16位密码，区分大小写">
                         <span class="tishi_span"></span>
                     </li>
                     <li class="zc_li title_tishi">
                         <span class="zc_title">确认密码:</span>
-                        <input type="text" class="zc_input repwd" placeholder="再次输入密码">
+                        <input type="password" class="zc_input repwd" placeholder="再次输入密码">
                         <span class="tishi_span"></span>
                     </li>
                     <li class="zc_li title_tishi">
