主页增加id跳转  2.0

--- a/index/index.html
+++ b/index/index.html
@@ -166,7 +166,7 @@
                                 <em class="em1"></em>
                                 <em class="em2"></em>
                                 <div class="pop">
-            
+<!--             
                                      <div class="detlist">
                                         <div class="detlist-left ">
                                             <img src="./details/images/img1/1.jpg" alt=""><span></span>
@@ -182,7 +182,7 @@
                                         <p class="del-det">
                                             <i></i>
                                         </p>
-                                    </div>
+                                    </div> -->
                                 </div>
             
                                 <div class="to-shopC">
@@ -709,14 +709,14 @@
     <div class='banner'>
         <div class="banner-box">
             <div class="bannerimg">
-                <a href="#"><img style="z-index: 1" src="./images/banner1.jpg" alt=""></a>
-                <a href="#"><img src="./images/banner2.jpg" alt=""></a>
-                <a href="#"><img src="./images/banner3.jpg" alt=""></a>
-                <a href="#"><img src="./images/banner4.jpg" alt=""></a>
-                <a href="#"><img src="./images/banner5.jpg" alt=""></a>
-                <a href="#"><img src="./images/banner6.jpg" alt=""></a>
-                <a href="#"><img src="./images/banner7.jpg" alt=""></a>
-                <a href="#"><img src="./images/banner8.jpg" alt=""></a>
+                <a href="../details/details.html?id=1"><img style="z-index: 1" src="./images/banner1.jpg" alt=""></a>
+                <a href="../details/details.html?id=1"><img src="./images/banner2.jpg" alt=""></a>
+                <a href="../details/details.html?id=1"><img src="./images/banner3.jpg" alt=""></a>
+                <a href="../details/details.html?id=1"><img src="./images/banner4.jpg" alt=""></a>
+                <a href="../details/details.html?id=1"><img src="./images/banner5.jpg" alt=""></a>
+                <a href="../details/details.html?id=1"><img src="./images/banner6.jpg" alt=""></a>
+                <a href="../details/details.html?id=1"><img src="./images/banner7.jpg" alt=""></a>
+                <a href="../details/details.html?id=1"><img src="./images/banner8.jpg" alt=""></a>
             </div>
             <ol class="banner-list">
                 <li class="banner-lihover"></li>
@@ -1323,22 +1323,22 @@
             <h2>品牌制造商</h2><span>工厂直达消费者，剔除品牌溢价</span><a href="javascript:;">更多制造商></a>
         </div>
         <div class='manufacturerlist'>
-            <a href="javascript:;" class='manufacturerfl'>
+            <a  href="../details/details.html?id=2" class='manufacturerfl'>
                 <div class='name'><span>海外制造商</span><span class='newShelfTag'>上新</span></div>
                 <div class='price'>9.9元起</div>
                 <img src='images/manufacturer1.png' class='img-box'>
             </a>
-            <a href="javascript:;" class='manufacturerfl'>
+            <a href="../details/details.html?id=2" class='manufacturerfl'>
                 <div class='name'><span>CK制造商</span></div>
                 <div class='price'>29.9元起</div>
                 <img src='images/manufacturer1.png' class='img-box'>
             </a>
-            <a href="javascript:;" class='manufacturersmall'>
+            <a  href="../details/details.html?id=3" class='manufacturersmall'>
                 <div class='name'><span>CK制造商</span></div>
                 <div class='price'>29.9元起</div>
                 <img src='images/manufacturer2.png' class='img-box'>
             </a>
-            <a href="javascript:;" class='manufacturersmall'>
+            <a  href="../details/details.html?id=3" class='manufacturersmall'>
                 <div class='name'><span>CK制造商</span></div>
                 <div class='price'>29.9元起</div>
                 <img src='images/manufacturer2.png' class='img-box'>
@@ -1357,7 +1357,7 @@
                 <div class='newitemList' id='newitemList'>
                     <div class="m-product">
                         <a href='#'></a>
-                        <div class='newitemList-img'>
+                        <div class='newitemList-img niunai'>
                             <img src='images/newProducts.jpg'>
                         </div>
                         <div class='colorNum'>日本制造</div>
@@ -1374,7 +1374,7 @@
                     </div>
                     <div class="m-product">
                         <a href='#'></a>
-                        <div class='newitemList-img'>
+                        <div class='newitemList-img niunai'>
                             <img src='images/newProducts.jpg'>
                         </div>
                         <div class='colorNum'>日本制造</div>
@@ -1391,7 +1391,7 @@
                     </div>
                     <div class="m-product">
                         <a href='#'></a>
-                        <div class='newitemList-img'>
+                        <div class='newitemList-img niunai'>
                             <img src='images/newProducts.jpg'>
                         </div>
                         <div class='colorNum'>日本制造</div>
@@ -1408,7 +1408,7 @@
                     </div>
                     <div class="m-product">
                         <a href='#'></a>
-                        <div class='newitemList-img'>
+                        <div class='newitemList-img niunai'>
                             <img src='images/newProducts.jpg'>
                         </div>
                         <div class='colorNum'>日本制造</div>
@@ -1425,7 +1425,7 @@
                     </div>
                     <div class="m-product">
                         <a href='#'></a>
-                        <div class='newitemList-img'>
+                        <div class='newitemList-img niunai'>
                             <img src='images/newProducts.jpg'>
                         </div>
                         <div class='colorNum'>日本制造</div>
@@ -1442,7 +1442,7 @@
                     </div>
                     <div class="m-product">
                         <a href='#'></a>
-                        <div class='newitemList-img'>
+                        <div class='newitemList-img niunai'>
                             <img src='images/newProducts.jpg'>
                         </div>
                         <div class='colorNum'>日本制造</div>
@@ -1459,7 +1459,7 @@
                     </div>
                     <div class="m-product">
                             <a href='#'></a>
-                            <div class='newitemList-img'>
+                            <div class='newitemList-img niunai'>
                                 <img src='images/newProducts.jpg'>
                             </div>
                             <div class='colorNum'>日本制造</div>
@@ -1476,7 +1476,7 @@
                     </div>
                     <div class="m-product">
                             <a href='#'></a>
-                            <div class='newitemList-img'>
+                            <div class='newitemList-img niunai'>
                                 <img src='images/newProducts.jpg'>
                             </div>
                             <div class='colorNum'>日本制造</div>
@@ -1513,7 +1513,7 @@
                 <div class="showContainerLeft">
                     <div class="m-product">
                         <a href='#'></a>
-                        <div class='newitemList-img big'>
+                        <div class='newitemList-img big putao'>
                             <img src='images/indexPopularItem1.png' class='img-box'>
                         </div>
                         <div class='colorNum'>日本制造</div>
@@ -1532,7 +1532,7 @@
                 <div class="showContainerRight">
                     <div class="m-product">
                         <a href='#'></a>
-                        <div class='newitemList-img small'>
+                        <div class='newitemList-img small putao'>
                             <img src='images/indexPopularItem2.png' class='img-box'>
                         </div>
                         <div class='colorNum'>日本制造</div>
@@ -1549,7 +1549,7 @@
                     </div>
                     <div class="m-product">
                         <a href='#'></a>
-                        <div class='newitemList-img small'>
+                        <div class='newitemList-img small putao'>
                             <img src='images/indexPopularItem2.png' class='img-box'>
                         </div>
                         <div class='colorNum'>日本制造</div>
@@ -1566,7 +1566,7 @@
                     </div>
                     <div class="m-product">
                         <a href='#'></a>
-                        <div class='newitemList-img small'>
+                        <div class='newitemList-img small putao'>
                             <img src='images/indexPopularItem2.png' class='img-box'>
                         </div>
                         <div class='colorNum'>日本制造</div>
@@ -1583,7 +1583,7 @@
                     </div>
                     <div class="m-product">
                         <a href='#'></a>
-                        <div class='newitemList-img small'>
+                        <div class='newitemList-img small putao'>
                             <img src='images/indexPopularItem2.png' class='img-box'>
                         </div>
                         <div class='colorNum'>日本制造</div>
@@ -1600,7 +1600,7 @@
                     </div>
                     <div class="m-product">
                         <a href='#'></a>
-                        <div class='newitemList-img small'>
+                        <div class='newitemList-img small putao'>
                             <img src='images/indexPopularItem2.png' class='img-box'>
                         </div>
                         <div class='colorNum'>日本制造</div>
@@ -1617,7 +1617,7 @@
                     </div>
                     <div class="m-product">
                         <a href='#'></a>
-                        <div class='newitemList-img small'>
+                        <div class='newitemList-img small putao'>
                             <img src='images/indexPopularItem2.png' class='img-box'>
                         </div>
                         <div class='colorNum'>日本制造</div>
